[package]
name = "decrypto"
version = "0.1.0"
authors = ["dolcetriade <vcelestialragev@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-beta.3"
rand = "0.6.5"
indexmap = "1.0.2"
tera = "0.11.20"
serde_json = "1.0.39"
serde = { version = "1.0.91", features = ["derive"] }
actix-session = "0.1.0-beta.2"
actix-files = "0.1.0-betsa.1"
actix-web-actors = "1.0.0-alpha.3"
actix = "0.8.1"
uuid = "0.7.4"
