[package]
name = "decrypto"
version = "0.1.0"
authors = ["dolcetriade <vcelestialragev@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-rc"
rand = "0.6.5"
indexmap = "1.0.2"
tera = "0.11.20"
serde_json = "1.0.39"
serde = { version = "1.0.91", features = ["derive"] }
actix-session = "0.1.0"
actix-files = "0.1.0"
actix-web-actors = "1.0.0-beta.4"
actix = "0.8.2"
uuid = { version = "0.7.4", features = ["v4"] }
